src/ilw-call-to-action.styles.css
@layer base {
    :host {
        --ilw-call-to-action--font: var(--il-font-sans); /*var: Font family for the content*/
        --ilw-call-to-action--padding-top: 6.25rem; /*var: Top padding inside the component*/
        --ilw-call-to-action--padding-right: 30px; /*var: Right padding inside the component*/
        --ilw-call-to-action--padding-bottom: 5.75rem; /*var: Bottom padding inside the component*/
        --ilw-call-to-action--padding-left: 30px; /*var: Left padding inside the component*/
        --ilw-call-to-action--content-max-width: 814px; /*var: Maximum width of the content area, excluding the icon*/
        --ilw-call-to-action--content-padding: 8px; /*var: Padding of the content area*/
        --ilw-call-to-action--content-padding-column: 8px 20px; /*var: Padding of the content area on smaller devices*/

        --ilw-call-to-action--icon-margin: 2rem; /*var: Spacing between icon and content*/
        --ilw-call-to-action--icon-width: 8rem; /*var: Icon maximum width*/
        --ilw-call-to-action--icon-height: 6.5rem; /*var: Icon maximum  height*/

        --ilw-call-to-action--background: var(--il-storm-lighter-4); /*var: CSS background for the component*/
        --ilw-call-to-action--icon-color: var(--il-blue); /*var: Color of an icon in the component*/
        --ilw-call-to-action--heading-color: var(--il-blue); /*var: Color of a heading in the component*/
        --ilw-call-to-action--text-color: var(--ilw-text--color); /*var: Color of text in the component*/

        /* Links need to be colored differently depending on the theme */
        --ilw-call-to-action--link: var(--ilw-link--color); /*var: Color for links inside the component */
        --ilw-call-to-action--link-focus: var(--ilw-link--focused-color); /*var: Focus and hover color for links inside the component*/
        --ilw-call-to-action--link-visited: var(--ilw-link--visited-color); /*var: Visited link color for inside the component*/

        --root-page-width: calc(100vw - (100vw - 100%));
    }

    :host([theme="white"] ) {
        --ilw-call-to-action--background: #ffffff;
    }

    :host([theme="blue"] ) {
        --ilw-call-to-action--background: var(--il-blue);
        --ilw-call-to-action--icon-color: #ffffff;
        --ilw-call-to-action--heading-color: #ffffff;
        --ilw-call-to-action--text-color: #ffffff;

        --ilw-call-to-action--link: #ffffff;
        --ilw-call-to-action--link-focus: var(--il-orange);
        --ilw-call-to-action--link-visited: #fff;

        /* Buttons also need color changes with themes, but overriding classes on
        the buttons themselves should take precedence over these. */
        --ilw-button--background-color: var(--il-blue);
        --ilw-button--foreground-color: #ffffff;
        --ilw-button--border-color: #ffffff;
        --ilw-button--focused-background-color: #fff;
        --ilw-button--focused-foreground-color: var(--il-blue);
        --ilw-button--focused-border-color: var(--il-blue);
    }

    :host([theme="blue-gradient"] ) {
        --ilw-call-to-action--background: linear-gradient(
                160deg,
                var(--il-industrial) 20%,
                var(--il-blue) 100%
        );
        --ilw-call-to-action--icon-color: #ffffff;
        --ilw-call-to-action--heading-color: #ffffff;
        --ilw-call-to-action--text-color: #ffffff;

        --ilw-call-to-action--link: #ffffff;
        --ilw-call-to-action--link-focus: var(--il-orange);
        --ilw-call-to-action--link-visited: #fff;

        --ilw-button--background-color: var(--il-blue);
        --ilw-button--foreground-color: #ffffff;
        --ilw-button--border-color: #ffffff;
        --ilw-button--focused-background-color: #fff;
        --ilw-button--focused-foreground-color: var(--il-blue);
        --ilw-button--focused-border-color: var(--il-blue);
    }
}

:host {
    display: block;

    container-type: inline-size;
    color: var(--ilw-call-to-action--text-color);
    font-family: var(--ilw-call-to-action--font);
}

:host([align="center"]) {
    text-align: center;
}

.call-to-action {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background: var(--ilw-call-to-action--background);
    padding-top: var(--ilw-call-to-action--padding-top);
    padding-right: var(--ilw-call-to-action--padding-right);
    padding-bottom: var(--ilw-call-to-action--padding-bottom);
    padding-left: var(--ilw-call-to-action--padding-left);

    column-gap: var(--ilw-call-to-action--icon-margin);
    row-gap: var(--ilw-call-to-action--icon-margin);

    &.fixed {
        left: 50%;
        margin-left: -50vw;
        margin-right: -50vw;
        padding-left: 0;
        padding-right: 0;
        position: relative;
        right: 50%;
        width: 100vw;
    }
}

.call-to-action-icon {
    display: none;
    color: var(--ilw-call-to-action--icon-color);
    max-width: var(--ilw-call-to-action--icon-width);
    max-height: var(--ilw-call-to-action--icon-height);
    flex: 1;
}

.graphic .call-to-action-icon {
    display: block;
}

.call-to-action-content {
    max-width: var(--ilw-call-to-action--content-max-width);
    flex: 1;
    padding: var(--ilw-call-to-action--content-padding);
}

@container (width <= 650px) {
    .call-to-action {
        flex-direction: column;
        align-items: center;
    }
    .call-to-action-content {
        padding: var(--ilw-call-to-action--content-padding-column);
    }
}

